<?xml version="1.0"?>
<package format="2">
  <name>mas_environments</name>
  <version>1.0.0</version>
  <description>Package for environment maps created by and/or used by our robots</description>

  <author email="aleksandar.mitrevski@h-brs.de">Alex Mitrevski</author>
  <maintainer email="robotics@inf.h-brs.de">MAS robotics</maintainer>
  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <exec_depend>mas_navigation_tools</exec_depend>
</package>
